<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Rodrigo Lopez Lopez"
            android:textAlignment="center"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/textViewTittle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textViewNumeros"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/xTVNumero"
            android:textAlignment="center"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:stretchColumns="*">
            <TableRow>
                <Button
                    android:id="@+id/button1"
                    android:text="@string/xNum1" />

                <Button
                    android:id="@+id/button2"
                    android:text="@string/xNum2" />

                <Button
                    android:id="@+id/button3"
                    android:text="@string/xNum3" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button4"
                    android:text="@string/xNum4" />

                <Button
                    android:id="@+id/button5"
                    android:text="@string/xNum5" />

                <Button
                    android:id="@+id/button6"
                    android:text="@string/xNum6" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button7"
                    android:text="@string/xNum7" />

                <Button
                    android:id="@+id/button8"
                    android:text="@string/xNum8" />

                <Button
                    android:id="@+id/button9"
                    android:text="@string/xNum9" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button0"
                    android:text="@string/xNum0" />

                <Button
                    android:id="@+id/buttonFactorial"
                    android:text="@string/xNumFactorial" />

                <Button
                    android:id="@+id/buttonNM"
                    android:text="@string/xNumNM" />

            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/buttonLimpiar"
                    android:text="@string/xBorrar"
                    android:layout_column="1"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>